Added new files

--- a/valorant.html
+++ b/valorant.html
@@ -19,7 +19,7 @@ body {
 <tr>
 <th><a href ="index.html"> Home</a></th>
 <th></th>
-<th><a href="Valorant.html">Valorant</a></th>
+<th><a href="valorant.html">Valorant</a></th>
 <th><a href="Map.html">Maps</a></th>
 <th><a href="Gun.html">Guns</a></th>
 <th><a href = "Aboutme.html">About Me...</a></th>
