--- a/Map.html
+++ b/Map.html
@@ -21,7 +21,7 @@ body {
 <th><a href ="index.html"> Home</a></th>
 <th></th>
 
-<th><a href="Valorant.html">Valorant</a></th></p>
+<th><a href="valorant.html">Valorant</a></th></p>
 <th><a href="Map.html">Maps</a></th>
 <th><a href="Gun.html">Guns</a></th>
 <th><a href = "Aboutme.html">About Me...</a></th>
